# MediaPlayer-Qt-Qml

./: CMakeLists.txt  README.md  main.qml  main_qt6.qml  qml.qrc
